@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Added Clover map (Michiel van der Wulp)
 - Added Gosh patches (Tejay Penfold)
 - Added Shipyard (Tejay Penfold and Francois Beerten)
 - Added Multiple Fronts map (Michiel van der Wulp)
